<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/todayFragment">
    <fragment
        android:id="@+id/todayFragment"
        android:name="com.example.myweather.ui.today.TodayFragment"
        android:label="@string/today"
        tools:layout="@layout/today_fragment" />
    <fragment
        android:id="@+id/nextWeekFragment"
        android:name="com.example.myweather.ui.nextWeek.NextWeekFragment"
        android:label="@string/next_week"
        tools:layout="@layout/next_week_fragment" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.myweather.ui.settings.SettingsFragment"
        android:label="@string/setting_nav"
        tools:layout="@layout/settings_fragment" />
</navigation>